| Summary: | ASTERISK-25791: res_pjsip_caller_id: Lack of support for Anonymous <anonymous@anonymous.invalid> | ||||||
| Reporter: | Anthony Messina (amessina) | Labels: | |||||
| Date Opened: | 2016-02-13 17:58:55.000-0600 | Date Closed: | 2016-03-08 20:38:13.000-0600 | ||||
| Priority: | Minor | Regression? | |||||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_caller_id | ||||
| Versions: | 13.7.2 | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ( 0) res_pjsip_callerid_privacy.patch | |||||
| Description: | When setting CALLERID(pres)=prohib, enable PJSIP to change the From: header to "Anonymous <anonymous@anonymous.invalid>" as is done for chan_sip. | ||||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-02-13 17:58:56.433-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-02-15 10:35:09.774-0600 Do you plan on providing an issue for this? If so it can be included faster if you follow the Patch Contribution Process mentioned. By: Anthony Messina (amessina) 2016-02-15 16:48:25.330-0600 I'm not sure what you mean "plan on providing an issue..." I do not have a patch if that's what you mean. I raised the issue because it was addressed for chan_sip (ASTERISK-19465), but not for PJSIP. I realize it's not a high priority, but something folks may come to expect, since it was "fixed" in a previous release. By: Federico Santulli (fsantulli) 2016-02-27 05:35:32.993-0600 Here attached the patch to res_pjsip_caller_id.c to allow callerid privacy. By: George Joseph (gjoseph) 2016-02-27 10:12:14.474-0600 Thanks for the patch Federico but I've already got a review up with the fix. If you'd like to test, look under the "Gerrit Reviews" tab. | ||||||